--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/theme' layer(theme);
 @import 'tailwindcss/preflight' layer(base);
 @import 'tailwindcss/utilities' layer(utilities);
+
+body {
+  background-color: #fffefd; /* 배경색 */
+}
