feat: 기능 수정 및 api 연동

--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,14 @@
 body {
   background-color: #fffefd; /* 배경색 */
 }
+
+/* 애니메이션 */
+@keyframes heartbeat {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+}
