feat: 이력서 작성 페이지 로딩 화면 추가 및 버튼 디자인 수정(전역 스타일 적용)

--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,14 @@ body {
     transform: scale(1.1);
   }
 }
+
+button {
+  transition: transform 150ms;
+}
+button:hover {
+  transform: scale(1.02);
+  cursor: pointer;
+}
+button:active {
+  transform: scale(0.95);
+}
